--- a/Shuttle.Core.Data.ThreadDatabaseContextScope/.package/package.nuspec
+++ b/Shuttle.Core.Data.ThreadDatabaseContextScope/.package/package.nuspec
@@ -3,7 +3,7 @@
 <package>
 	<metadata>
 		<id>Shuttle.Core.Data.ThreadDatabaseContextScope</id>
-		<version>#{SemanticVersion}#</version>
+		<version>16.0.2</version>
 		<authors>Eben Roux</authors>
 		<owners>Eben Roux</owners>
 		<license type="expression">BSD-3-Clause</license>
@@ -13,10 +13,12 @@
 		<repository type="git" url="https://github.com/Shuttle/Shuttle.Core.Data.ThreadDatabaseContextScope.git" />
 		<projectUrl>https://github.com/Shuttle/Shuttle.Core.Data.ThreadDatabaseContextScope</projectUrl>
 		<description>Provides a mechanism to create a new database context scope per processor thread.</description>
-		<copyright>Copyright (c) #{Year}#, Eben Roux</copyright>
+		<copyright>Copyright (c) 2024, Eben Roux</copyright>
 		<tags></tags>
 		<dependencies>
-#{Dependencies}#
+      <dependency id="Microsoft.Extensions.Hosting" version="8.0.0" />
+      <dependency id="Shuttle.Core.Data" version="16.0.2" />
+      <dependency id="Shuttle.Core.Threading" version="13.1.0" />
 		</dependencies>
 	</metadata>
 	<files>
