--- a/Shuttle.Core.Data.ThreadDatabaseContextScope.Tests/Shuttle.Core.Data.ThreadDatabaseContextScope.Tests.csproj
+++ b/Shuttle.Core.Data.ThreadDatabaseContextScope.Tests/Shuttle.Core.Data.ThreadDatabaseContextScope.Tests.csproj
@@ -1,22 +1,23 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-	<PropertyGroup>
-		<TargetFramework>net8.0</TargetFramework>
-		<ImplicitUsings>enable</ImplicitUsings>
-		<Nullable>enable</Nullable>
-	</PropertyGroup>
+  <PropertyGroup>
+    <TargetFramework>net8.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
+  </PropertyGroup>
 
-	<ItemGroup>
-		<PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.4" />
-		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
-		<PackageReference Include="Moq" Version="4.20.70" />
-		<PackageReference Include="NUnit" Version="3.14.0" />
-		<PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
-		<PackageReference Include="Shuttle.Core.Threading" Version="13.1.0" />
-	</ItemGroup>
+  <ItemGroup>
+    		<PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.2" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
+    <PackageReference Include="Moq" Version="4.20.72" />
+    <PackageReference Include="NUnit" Version="4.2.2" />
+    <PackageReference Include="NUnit3TestAdapter" Version="4.6.0" />
+    <PackageReference Include="Shuttle.Core.Threading" Version="20.0.0" />
+  </ItemGroup>
 
-	<ItemGroup>
-		<ProjectReference Include="..\Shuttle.Core.Data.ThreadDatabaseContextScope\Shuttle.Core.Data.ThreadDatabaseContextScope.csproj" />
-	</ItemGroup>
+  <ItemGroup>
+    <ProjectReference
+      Include="..\Shuttle.Core.Data.ThreadDatabaseContextScope\Shuttle.Core.Data.ThreadDatabaseContextScope.csproj" />
+  </ItemGroup>
 
 </Project>
