--- a/Shuttle.Core.Data.ThreadDatabaseContextScope/Shuttle.Core.Data.ThreadDatabaseContextScope.csproj
+++ b/Shuttle.Core.Data.ThreadDatabaseContextScope/Shuttle.Core.Data.ThreadDatabaseContextScope.csproj
@@ -1,16 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.1</TargetFrameworks>
+    <TargetFramework>net6.0</TargetFramework>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <nullable>enable</nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
-    <PackageReference Include="Shuttle.Core.Data" Version="17.0.0" />
-    <PackageReference Include="Shuttle.Core.Threading" Version="13.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.1" />
+    <PackageReference Include="Shuttle.Core.Data" Version="20.0.0" />
+    <PackageReference Include="Shuttle.Core.Threading" Version="20.0.0" />
   </ItemGroup>
-  
+
   <ItemGroup>
     <None Include=".package\AssemblyInfo.cs.template" />
     <None Include=".package\package.msbuild" />
